...
                  Icons.logout_outlined,
                  color: BrandColors.secondary,
                  size: 24,
                ),
                const SizedBox(width: 12),
                Text(
                  'Logout',
                  style: TextStyle(
                    fontSize: 18,
                    fontWeight: FontWeight.w600,
                    color: BrandColors.secondary,
                    letterSpacing: 0.5,
                  ),
...
